# tai

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/app-db/: Cargo.toml
crates/app-db/src/: lib.rs
crates/audit-log/: Cargo.toml
crates/audit-log/src/: lib.rs
crates/license/: Cargo.toml
crates/license/src/: lib.rs
crates/local-llm/: Cargo.toml
crates/local-llm/src/: lib.rs
crates/local-ocr/: Cargo.toml
crates/local-ocr/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/secure-storage/: Cargo.toml
crates/secure-storage/src/: lib.rs
crates/tally-client/: Cargo.toml
crates/tally-client/src/: lib.rs
crates/tally-xml/: Cargo.toml
crates/tally-xml/src/: lib.rs
crates/tool-router/: Cargo.toml
crates/tool-router/src/: lib.rs
docs/: 000-product-brief.md  001-architecture.md  002-security-and-privacy.md  003-tally-integration-notes.md  004-roadmap.md  005-test-strategy.md  006-decisions.md  007-coding-style.md  008-local-threat-model.md  lab-notebook.md
fixtures/: README.md
fixtures/excel/: README.md
fixtures/ocr/: README.md
fixtures/tally/: README.md
models/: README.md
scripts/dev/: check.ps1
scripts/package/: windows.ps1
