[package]
name = "tally-ai-companion-desktop"
version = "0.1.0"
description = "Offline Tally AI Companion desktop app"
edition = "2021"
license = "UNLICENSED"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
app-core = { path = "../../../crates/app-core" }

