[package]
name = "tally-ai-companion-desktop"
version.workspace = true
description = "Offline Tally AI Companion desktop app"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
app-core.workspace = true
